# screenpear

./: .gitignore  README.md  flake.nix  pyproject.toml
screenpear/: __init__.py  appleocr.py
