[tool.poetry]
name = "screenpear"
version = "0.1.0"
description = ""
authors = ["Dmitry Kireev <dmitry@atd.sh>"]
readme = "README.md"
packages = [
    { include = "screenpear", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = "^8.1.6"
opencv-python = "^4.9.0.80"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
